cabal-version:      2.4
name:               trex
version:            0.1.0.0

author:             Dan Pittman
maintainer:         dan@dpitt.me

executable trex
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      hakyll,
                      pandoc
    hs-source-dirs:   bin
    ghc-options: -Wall -threaded
    default-language: Haskell2010
