cabal-version: 2.4
name: trex
version: 0.1.0.0
author: Dan Pittman
maintainer: dan@dpitt.me

executable trex
  main-is: Main.hs
  build-depends:
    base ^>=4.18.3.0,
    bytestring,
    dhall,
    directory,
    filepath,
    hakyll,
    optparse-applicative,
    pandoc,
    req,
    text,

  hs-source-dirs: bin
  ghc-options:
    -Wall
    -threaded

  default-language: Haskell2010
